--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">FlowLocationAssignment</string>
+    <string name="login_success">Successfully Logged In</string>
+    <string name="please_wait">Please wait</string>
+    <string name="sign_up">SIGN UP</string>
+    <string name="sign_in">SIGN IN</string>
+    <string name="done">Done</string>
 </resources>
